--- a/.github/workflows/enhanced-security.yml
+++ b/.github/workflows/enhanced-security.yml
@@ -121,14 +121,14 @@ jobs:
             --sarif-file-output=snyk-code.sarif
 
       - name: Upload SARIF results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: snyk-${{ matrix.scan-type }}.sarif
           category: snyk-${{ matrix.scan-type }}
 
       - name: Archive security scan results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: always()
         with:
           name: snyk-${{ matrix.scan-type }}-results
@@ -161,7 +161,9 @@ jobs:
           docker tag cicd-demo:${{ github.sha }} cicd-demo:latest
 
       - name: Run Snyk Container Scan
+        id: snyk-container
         uses: snyk/actions/docker@master
+        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
@@ -172,9 +174,18 @@ jobs:
             --exclude-base-image-vulns
             --sarif-file-output=snyk-container.sarif
 
+      - name: Check if SARIF file exists
+        id: check-sarif
+        run: |
+          if [ -f "snyk-container.sarif" ]; then
+            echo "sarif_exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "sarif_exists=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Upload container scan results
-        uses: github/codeql-action/upload-sarif@v2
-        if: always()
+        uses: github/codeql-action/upload-sarif@v3
+        if: always() && steps.check-sarif.outputs.sarif_exists == 'true'
         with:
           sarif_file: snyk-container.sarif
           category: snyk-container
