--- a/.github/workflows/enhanced-security.yml
+++ b/.github/workflows/enhanced-security.yml
@@ -97,8 +97,10 @@ jobs:
         run: mvn clean compile -DskipTests
 
       - name: Run Snyk Dependency Scan
+        id: snyk-deps
         if: matrix.scan-type == 'dependencies'
         uses: snyk/actions/maven@master
+        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
@@ -109,8 +111,10 @@ jobs:
             --sarif-file-output=snyk-dependencies.sarif
 
       - name: Run Snyk Code Security Scan (SAST)
+        id: snyk-code
         if: matrix.scan-type == 'code'
         uses: snyk/actions/maven@master
+        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
@@ -120,16 +124,26 @@ jobs:
             --project-name=${{ github.repository }}-code
             --sarif-file-output=snyk-code.sarif
 
+      - name: Check if SARIF file exists
+        id: check-sarif
+        run: |
+          if [ -f "snyk-${{ matrix.scan-type }}.sarif" ]; then
+            echo "sarif_exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "sarif_exists=false" >> $GITHUB_OUTPUT
+            echo "SARIF file snyk-${{ matrix.scan-type }}.sarif not found"
+          fi
+
       - name: Upload SARIF results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
-        if: always()
+        if: always() && steps.check-sarif.outputs.sarif_exists == 'true'
         with:
           sarif_file: snyk-${{ matrix.scan-type }}.sarif
           category: snyk-${{ matrix.scan-type }}
 
       - name: Archive security scan results
         uses: actions/upload-artifact@v4
-        if: always()
+        if: always() && steps.check-sarif.outputs.sarif_exists == 'true'
         with:
           name: snyk-${{ matrix.scan-type }}-results
           path: snyk-${{ matrix.scan-type }}.sarif
